--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --progress --colors"
+    "dev": "webpack-dev-server --progress --colors --port=9000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "vtpl": "github:elegant-view/vtpl"
+  },
+  "devDependencies": {
+    "babel-core": "^6.4.0",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13"
   }
 }
