--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
+    "babel-plugin-transform-es2015-modules-amd": "^6.4.3",
     "babel-preset-es2015": "^6.3.13",
+    "esl": "github:ecomfe/esl",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
   }
