--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-transform-es2015-modules-amd": "^6.4.3",
     "babel-preset-es2015": "^6.3.13",
     "esl": "github:ecomfe/esl",
+    "jasmine": "^2.4.1",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
   }
