--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vcomponent",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "src/main.js",
   "scripts": {
     "dev": "./node_modules/edp/bin/edp-cli webserver",
-    "dev-bak": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors --port=9000"
+    "build": "webpack ."
   },
   "author": "",
   "license": "ISC",
