--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "devDependencies": {
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
-    "babel-plugin-transform-es2015-modules-amd": "^6.4.3",
+    "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
     "babel-preset-es2015": "^6.3.13",
-    "edp": "^1.1.1",
-    "edp-webserver": "^1.2.5",
+    "babel-preset-stage-0": "^6.5.0",
+    "dev-server": "github:elegant-view/dev-server",
     "esl": "ecomfe/esl",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
+    "requirejs": "^2.2.0",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
   }
