--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "dev": "edp webserver",
+    "dev": "node dev.js",
     "build": "webpack ."
   },
   "author": "",
@@ -16,6 +16,7 @@
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
     "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.5.0",
     "dev-server": "github:elegant-view/dev-server",
