--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.5.0",
     "dev-server": "github:elegant-view/dev-server",
