--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "event": "github:elegant-view/event",
     "protectobject": "github:elegant-view/protectobject",
-    "vtpl": "github:elegant-view/vtpl"
+    "vtpl": "github:elegant-view/vtpl",
+    "event": "github:elegant-view/event",
+    "state": "github:elegant-view/state"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
@@ -24,8 +26,6 @@
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.5.0",
-    "dev-server": "github:elegant-view/dev-server",
-    "esl": "ecomfe/esl",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "requirejs": "^2.2.0",
